tests/files/semantic_err/proj2_man_semanticErr_incompatibleTypes5.c
int main() {

int x = 54;

int z = -33;

int* p = &z;

p = *x; // error: indirection requires pointer operand ('int' invalid)
}
